<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarberManagementModule.BarberProfile">

    <TextView
        android:id="@+id/TVMyProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple2"
        android:fontFamily="@font/inter_bold"
        android:includeFontPadding="true"
        android:padding="20dp"
        android:text="@string/MyProfile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:padding="5dp"
        android:text="@string/Back"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:icon="@drawable/back"
        app:iconGravity="start"
        app:iconPadding="-20dp"
        app:iconSize="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/TVMyProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IVProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_corner"
        android:clipToOutline="true"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/TVName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVProfile" />

    <Button
        android:id="@+id/BTEditProfile"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/gradient_horizontal"
        app:backgroundTint="@null"
        app:icon="@drawable/user"
        app:iconSize="20dp"
        app:iconGravity="start"
        android:drawableTint="@color/white"
        android:fontFamily="@font/inter_medium"
        android:text="@string/EditProfile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVName" />

    <Button
        android:id="@+id/BTMyService"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_horizontal"
        app:backgroundTint="@null"
        app:icon="@drawable/scissors"
        app:iconSize="18dp"
        app:iconGravity="start"
        android:drawableTint="@color/white"
        android:fontFamily="@font/inter_medium"
        android:text="@string/MyService"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTEditProfile" />

    <Button
        android:id="@+id/BTGallery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/gradient_horizontal"
        app:backgroundTint="@null"
        app:icon="@drawable/gallery"
        app:iconSize="23dp"
        app:iconGravity="start"
        android:drawableTint="@color/white"
        android:fontFamily="@font/inter_medium"
        android:text="@string/Gallery"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTMyService" />

    <Button
        android:id="@+id/BTLogOut"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/red_background"
        app:backgroundTint="@null"
        app:icon="@drawable/log_out"
        app:iconSize="19dp"
        app:iconGravity="start"
        android:drawableTint="@color/white"
        android:fontFamily="@font/inter_medium"
        android:text="@string/LogOut"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTGallery" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="18dp"
        android:text="Master Barber"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVMyProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>