<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarberManagementModule.BarberEditProfile">

    <TextView
        android:id="@+id/TVMyService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple2"
        android:fontFamily="@font/inter_bold"
        android:includeFontPadding="true"
        android:padding="20dp"
        android:text="@string/EditProfile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BTBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_medium"
        android:padding="5dp"
        android:text="@string/Back"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:icon="@drawable/back"
        app:iconPadding="-20dp"
        app:iconGravity="start"
        app:iconSize="10dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/TVMyService"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/IVProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVMyService"
        app:tint="@color/black"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/IBChangeProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        android:src="@drawable/camera"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/IVProfile"
        app:layout_constraintEnd_toEndOf="@+id/IVProfile"
        tools:srcCompat="@drawable/camera" />

    <LinearLayout
        android:id="@+id/LLProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVProfile">

        <TextView
            android:id="@+id/TVUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="true"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ETUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/purple_et_background"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="14dp"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TVEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="true"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ETEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/purple_et_background"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="14dp"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TVPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="true"
            android:text="@string/PhoneNumber"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ETPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/purple_et_background"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="14dp"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TVPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="true"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ETPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/purple_et_background"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="14dp"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TVDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="true"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ETDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/purple_et_background"
            android:ems="10"
            android:fontFamily="@font/inter"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="70dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:padding="14dp"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>