<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    app:circularflow_radiusInDP="10dp"
    tools:context=".BarberManagementModule.BarberAdmin">

<!--    <TextView-->
<!--        android:id="@+id/TVWelcomeTitle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/purple2"-->
<!--        android:fontFamily="@font/inter_bold"-->
<!--        android:includeFontPadding="true"-->
<!--        android:padding="20dp"-->
<!--        android:text="@string/WelcomeBarber"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/IBProfile"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginEnd="32dp"-->
<!--        android:padding="0dp"-->
<!--        android:src="@drawable/user"-->
<!--        android:background="@drawable/rounded_corner"-->
<!--        android:contentDescription="@string/WelcomeBarber"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/TVWelcomeTitle"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:srcCompat="@drawable/user" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/toolbaredit"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar_menu"
        app:title="Welcome Barber"
        app:titleMarginStart="135dp" />

    <TextView
        android:id="@+id/TVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_bold"
        android:singleLine="false"
        android:text="@string/BarberBooking"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/LLStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:background="@drawable/purple_accent_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVTitle">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTPending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_vertical"
            android:elevation="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/Pending"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:translationZ="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/purple_accent_background"
            android:elevation="0dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/Upcoming"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:translationZ="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/purple_accent_background"
            android:elevation="0dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/Completed"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:translationZ="0dp" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentBookingView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLStatus"
        app:navGraph="@navigation/navigation_booking_status" />

</androidx.constraintlayout.widget.ConstraintLayout>